--- a/css/index.css
+++ b/css/index.css
@@ -144,3 +144,241 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+
+/*CSS for the Header and elements contained in header section CSS that I added */
+
+.container header{
+    display:flex;
+    flex-flow:row wrap;
+    justify-content: space-between;
+    align-items:baseline;
+    width: 100%;
+}
+
+.container header img{
+    margin-left:0px;
+}
+
+.container header nav{
+    display:flex;
+    flex-flow:row wrap;
+    justify-content:space-around;
+    width:80%;
+
+}
+
+.container header nav a{
+    margin-top:20px;
+    margin-left:21px;
+    margin-right:21px;
+    margin-bottom:20px;
+    font-size:14px;
+    text-decoration:none;
+    color:black;
+}
+
+.container header img{
+    margin-top: 20px;
+    margin-bottom:20px;
+}
+
+/*End CSS for the Header*/
+
+.top-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+    border-bottom: 1px dashed black;
+}
+
+.top-content .text-container {
+    width: 48%;
+    padding: 0 1%;
+    padding-bottom: 20px;  
+}
+
+.middle-content {
+    margin-bottom: 20px;
+    border-bottom: 1px dashed black;
+}
+
+.middle-content h2 {
+    padding: 0 2%;
+    margin-bottom: 0;
+}
+
+.middle-content .boxes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.middle-content .boxes .box {
+    width: 12.5%;
+    height: 100px;
+    background: black;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/*CSS for all the boxes added by me (placed here so that CSS vaguely somewhat follows the order the affected elements appear on the page.
+
+For reference, here's what the instructions said with regard to the box color. 
+* [X] box1: `teal`
+* [X] box2: `gold`
+* [X] box3: `cadetblue`
+* [X] box4: `coral`
+* [X] box5: `crimson`
+* [X] box6: `forestgreen`
+* [X] box7: `darkorchid`
+* [X] box8: `hotpink`
+* [X] box9: `indigo`
+* [X] box10: `dodgerblue`
+
+*/
+
+.middle-content .boxes .box.box1 {
+    background-color: teal;
+}
+
+.middle-content .boxes .box.box2{
+    background-color: gold;
+}
+
+.middle-content .boxes .box.box3{
+    background-color: cadetblue;
+}
+
+
+.middle-content .boxes .box.box4{
+    background-color: coral;
+}
+
+
+.middle-content .boxes .box.box5{
+    background-color: crimson;
+}
+
+.middle-content .boxes .box.box6{
+    background-color: forestgreen;
+}
+
+.middle-content .boxes .box.box7{
+    background-color: darkorchid;
+}
+
+
+.middle-content .boxes .box.box8{
+    background-color: hotpink;
+}
+
+
+.middle-content .boxes .box.box9{
+    background-color: indigo;
+}
+
+.middle-content .boxes .box.box10{
+    background-color: dodgerblue;
+}
+
+
+/*The CSS for the bottom section before the footer*/
+
+
+.bottom-content {
+    display: flex;
+    margin: 0 2% 20px;
+    justify-content: space-around;
+}
+
+.bottom-content .text-container {
+    padding-right: 4%;
+}
+
+.bottom-content .text-container:last-child {
+    padding-right: 0;
+}
+
+/*CSS for the Footer */
+footer {
+    width: 100%;
+    background: black;
+}
+
+footer nav {
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 2%;
+    font-size: 14px;
+}
+
+footer nav a {
+    color: white;
+    text-decoration: none;
+}
+
+
+.container.about-page{
+    width:100%;
+}
+
+.container.about-page .about-top-section{
+    width:100%;
+    padding-right:20px;
+    padding-left:20px;
+    padding-bottom:20px;
+
+    margin-bottom:10px;
+    border-bottom: 1px dashed black;
+}
+
+.container.about-page .about-mid-section{
+    width:100%;
+    display:flex;
+    flex-flow:row wrap;
+    justify-content:space-between;
+    padding:10px;
+}
+
+.container.about-page .about-mid-section div{
+    width:378px;
+    height:425px;
+    margin-top:24px;
+    margin-bottom:15px;
+    border-bottom:1px dashed black;
+}
+
+.container.about-page .about-mid-section div h2{
+    margin-top:10px;
+    margin-bottom:10px;
+}
+
+.container.about-page .about-mid-section div p{
+    margin-top:10px;
+    margin-bottom:20px;
+}
+
+.container.about-page .about-mid-section button{
+    font-size:16px;
+    width:131px;
+    height:39px;
+    background-color: white;
+    border-radius:10px;
+    border: 2px solid black;
+    display:inline-block;
+}
+
+.container.about-page .about-lower-section{
+    width:100%;
+    padding-right:20px;
+    padding-left:20px;
+    padding-bottom:20px;
+    margin-top:18px;
+    margin-bottom:10px;
+}
