--- a/css/index.css
+++ b/css/index.css
@@ -181,9 +181,10 @@ footer nav a {
     margin-top: 20px;
     margin-bottom:20px;
 }
-
 /*End CSS for the Header*/
 
+
+/*START: CSS that came with file*/
 .top-content {
     display: flex;
     flex-wrap: wrap;
@@ -224,6 +225,7 @@ footer nav a {
     align-items: center;
     justify-content: center;
 }
+/*END CSS that came with initial project*/
 
 /*CSS for all the boxes added by me (placed here so that CSS vaguely somewhat follows the order the affected elements appear on the page.
 
@@ -238,7 +240,6 @@ For reference, here's what the instructions said with regard to the box color.
 * [X] box8: `hotpink`
 * [X] box9: `indigo`
 * [X] box10: `dodgerblue`
-
 */
 
 .middle-content .boxes .box.box1 {
@@ -288,7 +289,6 @@ For reference, here's what the instructions said with regard to the box color.
 
 /*The CSS for the bottom section before the footer*/
 
-
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
@@ -324,20 +324,26 @@ footer nav a {
 }
 
 
+/*CSS for for About Page*/
+
 .container.about-page{
     width:100%;
 }
 
+/*CSS for Top About Section that contains the "About" paragraph*/
 .container.about-page .about-top-section{
     width:100%;
     padding-right:20px;
     padding-left:20px;
     padding-bottom:20px;
-
     margin-bottom:10px;
     border-bottom: 1px dashed black;
 }
 
+
+/*CSS for "Mid-Section" where the four sections with photos and buttons
+- CSS here affects the section that contains 4 <div>'s that each contain an <h2> and <p>
+*/
 .container.about-page .about-mid-section{
     width:100%;
     display:flex;
@@ -374,6 +380,7 @@ footer nav a {
     display:inline-block;
 }
 
+/*CSS for Lower Section which contains closing paragraph titled "Let's Work Together"*/
 .container.about-page .about-lower-section{
     width:100%;
     padding-right:20px;
